<resources>
    <string name="app_name">Calculate</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="zeroButton">0</string>
    <string name="dotButton">.</string>
    <string name="resultButton">=</string>
    <string name="addButton">+</string>
    <string name="subtractionButton">-</string>
    <string name="multiplicationButton">*</string>
    <string name="divisionButton">/</string>
    <string name="resetButton">C</string>
    <string name="resultTextView">0</string>
    <string name="enterTextView">0</string>
    <string name="stopNull">На ноль делить нельзя</string>
</resources>
